--- a/index.html
+++ b/index.html
@@ -72,10 +72,7 @@
   <section id="what-we-do" class="intro">
     <h2 class="section-title primary-border">What We Do</h2>
     <p>
-      butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue
-      Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin
-      fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
-      sustainable Intelligentsia umami deep v craft
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi, ut impedit tempora dolorem deleniti nemo maxime? Officiis, ex nisi tempora minus amet fugit deleniti aliquam, voluptate architecto, similique quos velit.
     </p>
   </section>
 
